--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "socket.io": "^4.4.1",
+    "uuid": "^8.3.2"
   }
 }
